[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-maze-generator"
version = "0.1.0"
description = "A Dungeons & Dragons maze/dungeon generator with rooms, traps, treasures, and monsters."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
dnd-maze-generator = "dnd_maze_generator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
